--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2334,43 +2334,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2204049089.py:66: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2204049089.py:66: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['genres_clean'] = data['genres'].apply(extract_list_str)\n",
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2204049089.py:67: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2204049089.py:67: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['collection_clean'] = data['belongs_to_collection'].apply(extract_json_str)\n",
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2204049089.py:68: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2204049089.py:68: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['production_companies_clean'] = data['production_companies'].apply(extract_list_str)\n",
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2204049089.py:69: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2204049089.py:69: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['production_countries_clean'] = data['production_countries'].apply(extract_list_str)\n",
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2204049089.py:70: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2204049089.py:70: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['spoken_languages_clean'] = data['spoken_languages'].apply(extract_list_str)\n",
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2204049089.py:71: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2204049089.py:71: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['cast_clean'] = data['cast'].apply(extract_list_str)\n",
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2204049089.py:72: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2204049089.py:72: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3346,7 +3346,7 @@
    ],
    "source": [
     "# Columnas a eliminar.\n",
-    "drop_colums = ['video','poster_path', 'homepage','imdb_id','adult','poster_path',\n",
+    "drop_colums = ['video','poster_path', 'homepage','imdb_id','adult',\n",
     "               'tagline','original_language', 'belongs_to_collection','genres',\n",
     "               'production_companies','production_countries','spoken_languages',\n",
     "                'cast', 'crew'\n",
@@ -4141,7 +4141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\2342812240.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\2342812240.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4201,7 +4201,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_32472\\1520776411.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rhamer\\AppData\\Local\\Temp\\ipykernel_13540\\1520776411.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4772,6 +4772,59 @@
    "metadata": {},
    "source": [
     "<p>Con esto se daria por terminado el proceso de ETL de todo el conjunto de datos hasta este punto. quedando un con junto de datos de 44264 filas 21 </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = pd.read_csv('data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 44264 entries, 0 to 44263\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   budget                      44264 non-null  float64\n",
+      " 1   id                          44264 non-null  int64  \n",
+      " 2   original_title              44264 non-null  object \n",
+      " 3   overview                    44264 non-null  object \n",
+      " 4   popularity                  44264 non-null  float64\n",
+      " 5   release_date                44264 non-null  object \n",
+      " 6   revenue                     44264 non-null  float64\n",
+      " 7   runtime                     44264 non-null  float64\n",
+      " 8   status                      44264 non-null  object \n",
+      " 9   title                       44264 non-null  object \n",
+      " 10  vote_average                44264 non-null  float64\n",
+      " 11  vote_count                  44264 non-null  float64\n",
+      " 12  genres_clean                44264 non-null  object \n",
+      " 13  collection_clean            44264 non-null  object \n",
+      " 14  production_companies_clean  44264 non-null  object \n",
+      " 15  production_countries_clean  44264 non-null  object \n",
+      " 16  spoken_languages_clean      44142 non-null  object \n",
+      " 17  cast_clean                  44264 non-null  object \n",
+      " 18  crew_clean                  44264 non-null  object \n",
+      " 19  retorno_de_inversion        44264 non-null  float64\n",
+      " 20  release_year                44264 non-null  int64  \n",
+      "dtypes: float64(7), int64(2), object(12)\n",
+      "memory usage: 7.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data2.info()"
    ]
   }
  ],
