machine learning addition

--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -6735,7 +6735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine_sql = create_engine(\"mysql+pymysql://root:root@localhost/movies\")"
+    "# engine_sql = create_engine(\"mysql+pymysql://root:root@localhost/movies\")"
    ]
   },
   {
@@ -6755,7 +6755,7 @@
     }
    ],
    "source": [
-    "directores_df.to_sql('director', engine_sql, if_exists='replace', index=False)"
+    "# directores_df.to_sql('director', engine_sql, if_exists='replace', index=False)"
    ]
   },
   {
@@ -6775,7 +6775,7 @@
     }
    ],
    "source": [
-    "nombres_df.to_sql('actor', engine_sql, if_exists='replace', index=False)"
+    "# nombres_df.to_sql('actor', engine_sql, if_exists='replace', index=False)"
    ]
   },
   {
@@ -6795,7 +6795,7 @@
     }
    ],
    "source": [
-    "data.to_sql('movie', engine_sql, if_exists='replace', index=False)"
+    "# data.to_sql('movie', engine_sql, if_exists='replace', index=False)"
    ]
   },
   {
@@ -6803,7 +6803,8 @@
    "metadata": {},
    "source": [
     "<h1>Nota:</h1>\n",
-    "<p>una vez realizada la carga de los datos a la base de datos de nombre movie.db se procedera a realizar relaciones entre las tablas con el fin de tener datos mejor estructurados y de ese modo facilitar las diferentes consultas a traves de ellas y llegar a los resultados solicitados en el actual proyecto.</p>"
+    "<p>una vez realizada la carga de los datos a la base de datos de nombre movie.db se procedera a realizar relaciones entre las tablas con el fin de tener datos mejor estructurados y de ese modo facilitar las diferentes consultas a traves de ellas y llegar a los resultados solicitados en el actual proyecto.<hr>\n",
+    "en el trayecto de la limpieza se ha adelantado un poco con respecto a su comprension y por ello se adelanta un poco sobre la eliminacion de columnas y mas para de esta manera facilitar el paso del EDA que se aplicara de manera mas detallada y en pasos posteriores.</p>"
    ]
   }
  ],
